# lint-http

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.lock.license  Cargo.toml  README.md  REPORT.md  REUSE.toml  apycite.toml  clippy.toml  config_example.toml  deny.toml
.cargo/: config.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  citations.yml
docs/: configuration.md  development.md  rules.md
docs/rules/: TEMPLATE.md  client_accept_encoding_present.md  client_accept_ranges_on_partial_content.md  client_cache_respect.md  client_expect_100_continue_stateful.md  client_expect_header_valid.md  client_host_header.md  client_host_header_port_numeric.md  client_host_header_present.md  client_host_header_syntax.md  client_patch_method_content_type_match.md  client_prefer_header_and_preference_applied.md  client_range_header_syntax_valid.md  client_request_method_body_consistency.md  client_request_method_token_uppercase.md  client_request_method_token_valid.md  client_request_origin_header_present_for_cors.md  client_request_target_form_checks.md  client_request_target_no_fragment.md  client_request_uri_percent_encoding_valid.md  client_request_version_method_validity.md  client_sec_websocket_headers_consistency.md  client_user_agent_present.md  connection_efficiency.md  connection_upgrade_requires_upgrade_header.md  message_accept_and_content_type_negotiation.md  message_accept_encoding_parameter_validity.md  message_accept_header_media_type_syntax.md  message_accept_language_weight_validity.md  message_accept_ranges_and_206_consistency.md  message_access_control_allow_credentials_when_origin.md  message_access_control_allow_origin_valid.md  message_age_header_numeric.md  message_allow_header_method_tokens.md  message_auth_header_consistency.md  message_auth_scheme_iana_registered.md  message_authorization_credentials_present.md  message_basic_auth_base64_validity.md  message_bearer_token_format_validity.md  message_cache_control_and_pragma_consistency.md  (+157 more)
lint-http-core/: Cargo.toml
lint-http-core/src/: config.rs  http_date.rs  http_transaction.rs  lib.rs  lint.rs  protocol_event.rs  protocol_event_store.rs  serde_helpers.rs  state.rs  test_helpers.rs  transaction_history.rs
lint-http-proxy/: Cargo.toml
lint-http-proxy/src/: ca.rs  capture.rs  h3_instrument.rs  lib.rs  main.rs  test_helpers.rs  websocket_session.rs
lint-http-proxy/src/proxy/: body.rs  exchange.rs  hop_by_hop.rs  http.rs  http3.rs  http3_body.rs  mod.rs  pipeline.rs  stream.rs  tee_body.rs  test_support.rs  upstream.rs  upstream_h3.rs  websocket.rs
lint-http-proxy/tests/: integration_captures_seed.rs  integration_tls_config.rs  linkme_catalogue.rs  proxy_connect_integration.rs  proxy_connect_passthrough.rs  proxy_h3_integration.rs  proxy_live_stream.rs  proxy_request_headers.rs  proxy_upstream_h3_integration.rs  proxy_websocket_relay.rs
lint-http-proxy/tests/common/: mod.rs
lint-http-rules/: Cargo.toml  build.rs
lint-http-rules/src/: engine.rs  gendocs.rs  lib.rs  lint_protocol.rs  test_helpers.rs
lint-http-rules/src/helpers/: auth.rs  content_range.rs  cookie.rs  domain.rs  headers.rs  ipv6.rs  language.rs  status.rs  structured_fields.rs  token.rs  uri.rs  websocket.rs
lint-http-rules/src/queries/: by_resource.rs  by_resource_all_clients.rs  mod.rs
lint-http-rules/src/rules/: client_accept_encoding_present.rs  client_accept_ranges_on_partial_content.rs  client_cache_respect.rs  client_expect_header_valid.rs  client_host_header.rs  client_patch_method_content_type_match.rs  client_prefer_header_and_preference_applied.rs  client_range_header_syntax_valid.rs  client_request_method_token_valid.rs  client_request_origin_header_present_for_cors.rs  client_request_target_form_checks.rs  client_request_target_no_fragment.rs  client_request_uri_percent_encoding_valid.rs  client_request_version_method_validity.rs  client_sec_websocket_headers_consistency.rs  client_user_agent_present.rs  message_accept_and_content_type_negotiation.rs  message_accept_encoding_parameter_validity.rs  message_accept_header_media_type_syntax.rs  message_accept_language_weight_validity.rs  message_accept_ranges_and_206_consistency.rs  message_access_control_allow_credentials_when_origin.rs  message_access_control_allow_origin_valid.rs  message_age_header_numeric.rs  message_allow_header_method_tokens.rs  message_auth_scheme_iana_registered.rs  message_authorization_credentials_present.rs  message_basic_auth_base64_validity.rs  message_bearer_token_format_validity.rs  message_cache_control_and_pragma_consistency.rs  message_cache_control_directive_validity.rs  message_cache_control_token_valid.rs  message_caching_directive_interaction.rs  message_charset_iana_registered.rs  message_compression_and_transfer_encoding_consistency.rs  message_conditional_headers_consistency.rs  message_connection_header_tokens_valid.rs  message_connection_upgrade.rs  message_content_disposition_parameter_validity.rs  message_content_disposition_token_valid.rs  (+146 more)
specs/: ratchet.txt  sources.yaml  specs_generated.yaml
src/: ca.rs  capture.rs  config.rs  config_cache.rs  connection.rs  engine.rs  gendocs.rs  http_date.rs  http_transaction.rs  lib.rs  lint.rs  lint_protocol.rs  main.rs  protocol_event.rs  protocol_event_store.rs  proxy.rs  serde_helpers.rs  state.rs  test_helpers.rs  token.rs  transaction_history.rs  websocket_session.rs
src/helpers/: auth.rs  content_range.rs  cookie.rs  domain.rs  headers.rs  ipv6.rs  language.rs  mod.rs  structured_fields.rs  uri.rs  websocket.rs
src/proxy/: connect.rs  hop_by_hop.rs  http.rs  http3.rs  mod.rs  pipeline.rs  test_support.rs  websocket.rs
src/queries/: by_connection.rs  by_origin.rs  mod.rs  (+1 more)
tests/: helpers_additional.rs  integration_captures_seed.rs  integration_tls_config.rs  proxy_connect_integration.rs  proxy_connect_passthrough.rs  proxy_h3_integration.rs  proxy_websocket_relay.rs
(+199 files in other folders)
