# SPDX-FileCopyrightText: 2025 Alexandre Gomes Gaigalas <alganet@gmail.com>
#
# SPDX-License-Identifier: ISC

[package]
name = "lint-http"
version = "0.1.0"
edition = "2021"
authors = ["Alexandre Gomes Gaigalas <alganet@gmail.com>"]
description = "HTTP forward proxy that captures request/response metadata and runs lint rules"
license = "ISC"
repository = "https://github.com/alganet/lint-http"
readme = "README.md"
keywords = ["proxy", "http", "lint", "testing", "debugging"]
categories = ["network-programming", "development-tools"]

[dependencies]
tokio = { version = "1.43", features = ["full"] }
hyper = { version = "1.8.1", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = "0.3"
tracing = "0.1"
toml = "0.9"

# TLS Support
tokio-rustls = "0.26.4"
rustls = "0.23.25"
rustls-pemfile = "2.2"
hyper-rustls = { version = "0.27.7", features = ["http1", "http2"] }
hyper-util = { version = "0.1.19", features = ["server", "tokio", "client-legacy"] }

# Certificate Generation
rcgen = "0.14"
pem = "3.0"
base64 = "0.22"
bytes = "1"
http-body-util = "0.1"


[dev-dependencies]
wiremock = "0.6"

