# SPDX-FileCopyrightText: 2025 Alexandre Gomes Gaigalas <alganet@gmail.com>
#
# SPDX-License-Identifier: ISC

[workspace]
resolver = "2"
members = ["lint-http-core", "lint-http-rules", "lint-http-proxy"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Alexandre Gomes Gaigalas <alganet@gmail.com>"]
license = "ISC"
repository = "https://github.com/alganet/lint-http"

[workspace.dependencies]
# Internal crates
lint-http-core = { path = "lint-http-core" }
lint-http-rules = { path = "lint-http-rules" }

# Shared third-party dependencies (versions kept in lockstep across crates)
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
hyper = { version = "1.10.1", features = ["full"] }
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.23", features = ["v4", "serde"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
httpdate = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "1.1"
bytes = "1"
base64 = "0.22"
sha1 = "0.11"
linkme = "0.3"

# TLS Support
tokio-rustls = "0.26.4"
rustls = "0.23.40"
rustls-pemfile = "2.2.0"
hyper-rustls = { version = "0.27.9", features = ["http1", "http2"] }
hyper-util = { version = "0.1.20", features = ["server", "tokio", "client-legacy"] }

# HTTP/3 / QUIC
quinn = { version = "0.11.9", default-features = false, features = ["rustls-aws-lc-rs", "runtime-tokio"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"

# Certificate generation / misc
rcgen = "0.14"
pem = "3.0"
http-body-util = "0.1"
tokio-tungstenite = "0.29"
futures-util = "0.3"
rustls-native-certs = "0.8"

# Dev
wiremock = "0.6"
rstest = "0.26.1"
http = "1"
