# SPDX-FileCopyrightText: 2025 Alexandre Gomes Gaigalas <alganet@gmail.com>
#
# SPDX-License-Identifier: ISC

[package]
name = "lint-http-proxy"
description = "HTTP forward proxy that captures request/response metadata and runs lint rules"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["proxy", "http", "lint", "testing", "debugging"]
categories = ["network-programming", "development-tools"]

# Preserve the public library name so consumers (and integration tests) keep
# using `lint_http::...` after the workspace split.
[lib]
name = "lint_http"
path = "src/lib.rs"

[[bin]]
name = "lint-http"
path = "src/main.rs"

[dependencies]
lint-http-core = { workspace = true }
lint-http-rules = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
hyper = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
httpdate = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
sha1 = { workspace = true }

# TLS
tokio-rustls = { workspace = true }
rustls = { workspace = true }
hyper-rustls = { workspace = true }
hyper-util = { workspace = true }

# HTTP/3 / QUIC
quinn = { workspace = true }
h3 = { workspace = true }
h3-quinn = { workspace = true }

# Certificate generation / misc
rcgen = { workspace = true }
pem = { workspace = true }
http-body-util = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
rustls-native-certs = { workspace = true }

[dev-dependencies]
lint-http-core = { workspace = true, features = ["test-utils"] }
wiremock = { workspace = true }
rstest = { workspace = true }
http = { workspace = true }

[lints]
workspace = true
